# NorMIT-Plan

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  README.md  circle.yml
Doxygen/: CMakeLists.txt  Doxyfile.txt.in
ResectionPlanning/: CMakeLists.txt  ResectionPlanning.dox  ResectionPlanningModuleDefaultValues.h.in  qSlicerResectionPlanningLRPModelReader.cxx  qSlicerResectionPlanningLRPModelReader.h  qSlicerResectionPlanningModule.cxx  qSlicerResectionPlanningModule.h  qSlicerResectionPlanningModuleWidget.cxx  qSlicerResectionPlanningModuleWidget.h  qSlicerResectionPlanningReader.cxx  qSlicerResectionPlanningReader.h
ResectionPlanning/Logic/: CMakeLists.txt  vtkSlicerResectionPlanningLogic.cxx  vtkSlicerResectionPlanningLogic.h
ResectionPlanning/MRML/: CMakeLists.txt  vtkMRMLLRPModelDisplayNode.cxx  vtkMRMLLRPModelDisplayNode.h  vtkMRMLLRPModelNode.cxx  vtkMRMLLRPModelNode.h  vtkMRMLLRPModelStorageNode.cxx  vtkMRMLLRPModelStorageNode.h  vtkMRMLResectionInitializationDisplayNode.cxx  vtkMRMLResectionInitializationDisplayNode.h  vtkMRMLResectionInitializationNode.cxx  vtkMRMLResectionInitializationNode.h  vtkMRMLResectionLRPModelDisplayNode.cxx  vtkMRMLResectionLRPModelDisplayNode.h  vtkMRMLResectionLRPModelNode.cxx  vtkMRMLResectionLRPModelNode.h  vtkMRMLResectionSurfaceDisplayNode.cxx  vtkMRMLResectionSurfaceDisplayNode.h  vtkMRMLResectionSurfaceNode.cxx  vtkMRMLResectionSurfaceNode.h  vtkMRMLResectionSurfaceStorageNode.cxx  vtkMRMLResectionSurfaceStorageNode.h
ResectionPlanning/MRMLDM/: CMakeLists.txt  CMakeLists.txt~  vtkMRMLResectionDisplayableManager2D.cxx  vtkMRMLResectionDisplayableManager2D.h  vtkMRMLResectionDisplayableManager3D.cxx  vtkMRMLResectionDisplayableManager3D.h  vtkMRMLResectionDisplayableManager3DHelper.cxx  (+3 more)
ResectionPlanning/Testing/Cxx/: CMakeLists.txt  qMRMLTumorWidgetTest.cxx  qSlicerResectionPlanningSurfacesWidgetTest.cxx  qSlicerSurfaceWidgetTest.cxx  qSlicerTableItemWidgetTest.cxx  qSlicerTumorWidgetTest.cxx  vtkBezierSurfaceWidgetTest1.cxx  vtkLineWidget3Test1.cxx  vtkLineWidget3Test2.cxx  vtkMRMLResectionDisplayableManager2DTest1.cxx  vtkMRMLResectionDisplayableManager2DTest2.cxx  vtkMRMLResectionDisplayableManager3DTest1.cxx  vtkMRMLResectionInitializationDisplayNodeTest1.cxx  vtkMRMLResectionInitializationNodeTest1.cxx  vtkMRMLResectionLRPModelDisplayNodeTest1.cxx  vtkMRMLResectionLRPModelNodeTest1.cxx  vtkMRMLResectionSurfaceDisplayNodeTest1.cxx  vtkMRMLResectionSurfaceNodeTest1.cxx  vtkMRMLResectionSurfaceStorageNodeTest1.cxx  vtkMRMLResectionSurfaceStorageNodeTest1Config.h.in  vtkSlicerResectionPlanningLogicTest1.cxx
ResectionPlanning/VTKWidgets/: CMakeLists.txt  vtkBezierSurfaceSource.cxx  vtkBezierSurfaceSource.h  vtkBezierSurfaceWidget.cxx  vtkBezierSurfaceWidget.h  vtkDistanceFilter.cxx  vtkDistanceFilter.cxx~  vtkDistanceFilter.h  vtkDistanceFilter.h~  vtkHausdorffDistancePointSetFilter.cxx  vtkHausdorffDistancePointSetFilter.h  vtkLineWidget3.cxx  vtkLineWidget3.h
VesselSegmentation/: CMakeLists.txt  VesselSegmentationITKuseGPU.h.in  qSlicerVesselSegmentationModule.cxx  qSlicerVesselSegmentationModule.h  qSlicerVesselSegmentationModuleWidget.cxx  qSlicerVesselSegmentationModuleWidget.h
VesselSegmentation/ITKFilters/: itkBinaryThinningImageFilter3D.h  itkBinaryThinningImageFilter3D.hxx  itkConnectedRegionDistanceMapImageFilter.hxx  itkMultiScaleModifiedVesselnessMeasureImageFilter.h  itkSeedVesselSegmentationImageFilter.h  itkSeedVesselSegmentationImageFilter.hxx  itkVesselSegmentationPreProcessingFilter.hxx
VesselSegmentation/Logic/: CMakeLists.txt  itkBinaryThinningImageFilter3D.hxx  itkConnectedRegionDistanceMapImageFilter.h  itkConnectedRegionDistanceMapImageFilter.hxx  itkMultiScaleModifiedVesselnessMeasureImageFilter.h  itkMultiScaleModifiedVesselnessMeasureImageFilter.hxx  itkSeedVesselSegmentationImageFilter.h  itkSeedVesselSegmentationImageFilter.hxx  itkVesselSegmentationPreProcessingFilter.h  itkVesselSegmentationPreProcessingFilter.hxx  vtkSlicerVesselSegmentationLogic.cxx  vtkSlicerVesselSegmentationLogic.h  vtkVesselSegHelper.cxx  vtkVesselSegHelper.h  vtkVesselSegmentationHelper.cxx  vtkVesselSegmentationHelper.h
VesselSegmentation/Logic/ITKFilters/: itkConnectedRegionDistanceMapImageFilter.h
VesselSegmentation/MRML/: CMakeLists.txt  vtkMRMLPolygonNode.cxx  vtkMRMLPolygonNode.h  vtkMRMLVesselSegmentationSeedNode.cxx  vtkMRMLVesselSegmentationSeedNode.h
VesselSegmentation/MRMLDM/: CMakeLists.txt  vtkMRMLVesselSegmentationDisplayableManager.cxx  vtkMRMLVesselSegmentationDisplayableManager.h  vtkMRMLVesselSegmentationDisplayableManager2D.cxx  vtkMRMLVesselSegmentationDisplayableManager2D.h
VesselSegmentation/Resources/: qSlicerVesselSegmentationModule.qrc
VesselSegmentation/Resources/UI/: qSlicerVesselSegmentationFooBarWidget.ui  qSlicerVesselSegmentationHorPWidget.ui  qSlicerVesselSegmentationModuleWidget.ui  qSlicerVesselSegmentationPreprocessingWidget.ui  qSlicerVesselSegmentationSegmentationWidget.ui  qSlicerVesselSegmentationSplittingWidget.ui
VesselSegmentation/Testing/: CMakeLists.txt
VesselSegmentation/Testing/Cxx/: CMakeLists.txt  vtkMRMLMergeLabelsAndSplitTest.cxx  vtkMRMLPreprocessingImageTest.cxx  vtkMRMLSegmentationAndSimilarityTest.cxx  vtkMRMLTestFiducialList.cxx  vtkMRMLTestFileAndSegmentation.cxx  vtkMRMLVesselSegmentationDisplayableManager2DTest1.cxx  vtkMRMLVesselSegmentationLogicTest1.cxx  vtkMRMLVesselSegmentationSeedNodeTest1.cxx  vtkVesselSegmentationHelperTest1.cxx
VesselSegmentation/Testing/Python/: CMakeLists.txt  OpenSlicerSwitchToModuleTest.py  scriptedTest.py
VesselSegmentation/Widgets/: CMakeLists.txt  qSlicerVesselSegmentationFooBarWidget.cxx  qSlicerVesselSegmentationFooBarWidget.h  qSlicerVesselSegmentationHorPWidget.cxx  qSlicerVesselSegmentationHorPWidget.h  qSlicerVesselSegmentationPreprocessingWidget.cxx  qSlicerVesselSegmentationPreprocessingWidget.h  qSlicerVesselSegmentationSegmentationWidget.cxx  qSlicerVesselSegmentationSegmentationWidget.h  qSlicerVesselSegmentationSplittingWidget.cxx  qSlicerVesselSegmentationSplittingWidget.h
(+38 files in other folders)
